manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: palabras-contar-repeticiones
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: palabras-contar-repeticiones
